@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 Improvements::
 
 * use more stable approach to recreating current bounds in scratch document
+* add foundation to support multi-column layout for the body of an article (using an extended converter only)
 
 == 2.0.0.rc.1 (2022-05-17) - @mojavelinux
 
